--- a/pages/user-profile.html
+++ b/pages/user-profile.html
@@ -40,6 +40,21 @@
 
         </div>
         <div class="gov_menu">
+            <div class="podraz_results">
+                <div class="podraz_info">
+                    <div class="podraz_title">Результаты подразделений</div>
+                    <ol>
+                        <li class="podraz_color_1"><span class="podraz_name">Название отдела</span></li>
+                        <li class="podraz_color_2"><span class="podraz_name">Название отдела</span></li>
+                        <li class="podraz_color_3"><span class="podraz_name">Название отдела</span></li>
+                        <li class="podraz_color_4"><span class="podraz_name">Название отдела</span></li>
+                    </ol>
+                </div>
+                <div class="podraz_diagrama">
+                    <div class="diagrama"></div>
+                </div>
+
+            </div>
             <div class="tasks">
                 <div class="tasks_title">Задания</div>
                 <div class="tasks_row">
@@ -66,6 +81,7 @@
                     </div>
                 </div>
             </div>
+            
             <div class="results">
                 <div class="results_name">
                     Результаты
@@ -77,21 +93,22 @@
                     <div class="results_col">Ответы</div>
                 </div>
                 <div class="result">
-                    <div class="result_col">
+                    <div class="result_col_data">
                         20.11.22
                     </div>
                     <div class="result_col">
                         <div class="result_col_name">Тест 1</div>
                         <div class="result_col_subtitle">Описание теста</div>
                     </div>
-                    <div class="result_col">
+                    <div class="result_col_questions">
                         30
                     </div>
-                    <div class="result_col">
+                    <div class="result_col_answers">
                         29
                     </div>
                 </div>
             </div>
+            
         </div>
     </div>
 </body>
