--- a/pages/test-create.html
+++ b/pages/test-create.html
@@ -55,42 +55,7 @@
                 <div class="question_description_text">Описание задания</div>
                 <input class="question_description_input">
             </div>
-            <div class="question_type">
-                <div class="question_type_text">Тип задания</div>
-                <div class="type_list">
-                    <nav>
-                        <ul>
-                            <li><a href="#">Выбрать тип</a>
-                                <ul>
-                                    <li><a href="#">Варианты</a></li>
-                                    <li><a href="#">Видео</a></li>
-                                    <li><a href="#">Картинки</a></li>
-                                    <li><a href="#">Свой ответ</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                
-            </div>
-            <div class="answers_count">
-                <div class="answers_count_text">Количество вопросов</div>
-                <div class="count_list">
-                    <nav>
-                        <ul>
-                            <li><a href="#">Выбрать количество</a>
-                                <ul>
-                                    <li><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                
-            </div>
+
             <div class="answer">
                 <div class="answer_text">Ответ 1</div>
                 <input class="answer_input">
@@ -106,18 +71,11 @@
             <div class="right_answer">
                 <div class="right_answer_text">Правильный ответ</div>
                 <div class="answer_list">
-                    <nav>
-                        <ul>
-                            <li><a href="#">Выбрать ответ</a>
-                                <ul>
-                                    <li><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </nav>
+                    <select name="" id="">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select>
                 </div>
             </div>
             <div class="question_accept_button">
